--- a/client/app/views/templates/choices.css
+++ b/client/app/views/templates/choices.css
@@ -19,7 +19,7 @@
   padding-bottom: 10px;
   border-radius: 8px 8px 3px 3px;
   background-color: rgb(44,62,80);
-  max-height: 65px;
+  height: 65px;
   margin-top:-8px;
   overflow: hidden;
   transition:all 0.3s ease;
@@ -27,17 +27,19 @@
 
 /*when a category is selected by the user*/
 .choicesContainer .tab.choiceCategory{
-  max-height:500px!important;
+  height:auto!important;
+  min-height: 80px!important;
   margin-top:-8px!important;
   overflow: scroll;
   box-shadow: 0px 0px 15px black;
   background-color: rgb(64,82,100);
+  transition:all 0.3s ease;
 }
 
 /*hover behavior of the category tab*/
 .choicesContainer .tab:hover{
   box-shadow: 0px 0px 15px black;
-  max-height:100px;
+  height:100px;
   margin-top:-43px;
   transition:all 0.3s ease;
 }
@@ -83,20 +85,36 @@
   padding-top:20px; /*Space for tools buttons*/
   background-color: rgba(255,255,255,0.9);
   min-height:124px;
+  font-size: 12pt;
 }
 
 .choicesContainer .documentBlock .documentContent a{
-  color:black;
+  color:#2980b9;
   text-decoration: underline;
 }
 
 .choicesContainer .documentBlock .documentContent .documentTitle{
   padding-left:25px;
+  font-size:14pt;
 }
 
-#syncDYBDocumentsButton{
-  margin:15px;
+.choicesContainer .documentBlock .documentContent .documentDate, .choicesContainer .documentBlock .documentContent .documentSource{
+  font-size: 10pt;
 }
+
+/*FOR EMBEDED ELEMENTS*/
+.embededElement img{
+  max-height: 300px;
+  border-radius: 2px;
+  box-shadow: 0px 0px 8px rgba(0,0,0,0.7);
+  border:1px solid black;
+}
+
+.embededElement iframe{
+  border:1px solid black;
+}
+
+
 
 /*changes to the button to remove a document*/
 .choicesContainer div.removeButton{
@@ -192,6 +210,13 @@
 .choicesContainer #submitPart{
   margin-top:15px;
 }
+
+/*Button to sync DoYouBuzz documents*/
+#syncDYBDocumentsButton{
+  margin:15px;
+}
+
+
 
 
 /* Adding document part */
