changes for the "no documents" message

--- a/client/app/views/templates/choices.jade
+++ b/client/app/views/templates/choices.jade
@@ -37,7 +37,7 @@ div.container
     div.row#TabsContainer
       div.row.text-center
         h1.col-md-12 Mes choix
-        h4.col-md-12#noDocumentsMessage(hidden="true") Aucun documents à afficher. Vous pouvez synchroniser des documents DoYouBuzz ou en ajouter via la partie ci-dessous.
+        h4.col-md-12#noDocumentsMessage(hidden="true") Aucun documents à afficher. Vous pouvez synchroniser des documents DoYouBuzz ou en ajouter via la partie ci-dessous. Vous pouvez aussi récupérer vos badges de votre BackPack OpenBadges.
       //- It will contain all categories tabs dynamically here
     //- Submiting buttons and UI messages
     div.row#submitPart
