--- a/client/public/stylesheets/app.css
+++ b/client/public/stylesheets/app.css
@@ -206,7 +206,6 @@ h1 {
 /*documents container of each tab*/
 .choicesContainer .docsContainer{
   padding:5px;
-  min-height: 100px;
 }
 
 /*changes to the visibility checkbox*/
@@ -333,10 +332,9 @@ h1 {
 /*button to sync openBadges backpack badges*/
 #syncOBbutton{
   width:320px;
-  clear:both;
-  display: block;
-  margin: 0px auto;
-  margin-bottom:15px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
   background-color:rgba(126, 206, 234, 0.5);
 }
 
